# journal

./: .gitignore  Cargo.toml  README.md  backup.sh  book.toml  generate_facebook.sh  mdbook.sh  piosdhfiosdfoishoifskabfoiuv.txt  rust-toolchain
dev-memos/: 2022-09-21 rawmemo sononi.txt  2022-09-21 rawmemo sonosann.txt  adasdasdas.txt  history.md  piosdhfiosdfoishoifskabfoiuv.txt  second_window.rs
neta/: 2022-09-21 rawmemo sonosann.txt  2022-09-21 rawmemo.txt  8ughvbon8.txt  history.txt  motive.txt
src/: assets.rs  constants.rs  journalmanage.rs  lib.rs  main.rs  migration.rs  second_window.rs  subwindow.rs  tests.rs  typedef.rs  ui.rs  utils.rs
src/typedef/: component.rs  event.rs  mod.rs  resource.rs  state.rs
src/typedef/migration/: mod.rs
src/typedef/migration/facebook/: comments.rs  mod.rs  posts.rs
src/ui/: explore.rs  inner.rs  magage.rs  migrate.rs  mod.rs  newpage.rs  router.rs  top.rs
thejournal-documentation/: book.toml
thejournal-documentation/src/: SUMMARY.md  conclusion.md  diary.md  features.md  intro.md  rationale.md
