[package]
name = "thejournal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy_egui = "0.16.1"
egui = "0.19.0"
serde = { version = "1.0.145", features = ["derive"] }
petgraph = { version = "0.6.2", features = ["serde-1"] }
fdg-sim = "0.9.0"
ron = "0.8.0"
serde_json = "1.0.87"
rand = "0.8.5"
bevy_mod_picking = "0.9.0"

[dev-dependencies]
json_typegen_cli = "0.7.0"

[features]
# default = ["dynamic"]
default = []
dynamic = ["bevy/dynamic"]

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
